--- a/clusterKubernetes/installDocker/tasks/main.yml
+++ b/clusterKubernetes/installDocker/tasks/main.yml
@@ -1,44 +1,30 @@
 ---
-# tasks file for docker
-  - name: Update the apt package index
-    become: yes
-    apt:
-      name: "*"
-      state: latest
-      update_cache: yes
-      force_apt_get: yes
-  - name: Install packages for apt add repository over HTTPS
-    become: yes
-    apt:
-      name: "{{ packagesdep }}"
-      force_apt_get: yes
-      state: latest
-      update_cache: yes
-    vars:
-      packagesdep:
-      - git
-      - apt-transport-https
-      - ca-certificates
-      - wget
-      - software-properties-common
-      - gnupg2
-      - curl
-  - name: Add Apt signing key from official docker repo
-    apt_key:
-      url: https://download.docker.com/linux/debian/gpg
-      state: present
-  - name: add docker official repository for Debian Stretch
-    apt_repository:
-      repo: deb [arch=amd64] https://download.docker.com/linux/debian stretch stable
-      state: present
-  - name: Index new repo into the cache
-    become: yes
-    apt:
-      name: "*"
-      state: latest
-      update_cache: yes
-      force_apt_get: yes
-  - name: actually install docker
-    apt:
-      name: "docker-ce"
-      state: latest
+    - name: apt-get update
+      shell: apt-get update
+    
+    - name: install packages with apt
+      apt:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - apt-transport-https
+        - gnupg2
+        - ca-certificates
+        - software-properties-common
+
+    - name: add apt-key for Docker
+      apt_key:
+        url: https://download.docker.com/linux/debian/gpg
+        state: present
+
+    - name: add apt repo for Docker
+      apt_repository:
+        repo: deb https://download.docker.com/linux/debian buster stable
+        state: present
+        filename: 'docker'
+
+    - name: install Docker
+      apt:
+        name: docker-ce
+        state: present
+        update_cache: true
