--- a/clusterKubernetes/installKubernetes/tasks/main.yml
+++ b/clusterKubernetes/installKubernetes/tasks/main.yml
@@ -1,47 +1,39 @@
 ---
-# tasks file for install-kubernetes
-    - name: Create k8s config file
-      file:
-        path: "/etc/sysctl.d/k8s.conf"
-        shell:
-          cmd: |
-              cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
-              net.bridge.bridge-nf-call-ip6tables = 1
-              net.bridge.bridge-nf-call-iptables = 1
-              EOF
-              sudo sysctl --system
+    - name: set the swap off
+      shell:
+        cmd: swapoff -a
 
-    - name: modprobe
-      shell: |
-             sudo modprobe overlay
-             sudo modprobe br_netfilter
+    - name: switch nftables to iptables 
+      shell:
+        cmd: "{{ item }}"
+      loop:
+        - update-alternatives --set iptables /usr/sbin/iptables-legacy
+        - update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy
 
-    - name: Apply new settings
-      command: sudo sysctl --system
+    - name: add Kubernetes apt-key
+      apt_key:
+        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        state: present
 
-    - name: disable swap
-      shell: |
-              sudo swapoff -a
-              sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+    - name: add Kubernetes' APT repository
+      apt_repository:
+        repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+        state: present
+        filename: 'kubernetes'
 
-    - name: install and configure dependencies
-      shell: |
-              sudo apt-get update && sudo apt-get install -y apt-transport-https curl
-              curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+    - name: install kubelet
+      apt:
+        name: kubelet=1.23.0-00
+        state: present
+        update_cache: true
 
-    - name: Create kubernetes repo file
-      file:
-        path: "/etc/apt/sources.list.d/kubernetes.list"
-        state: "touch"
+    - name: install kubeadm
+      apt:
+        name: kubeadm=1.23.0-00
+        state: present
 
-    - name: Add K8s Source
-      blockinfile:
-        path: "/etc/apt/sources.list.d/kubernetes.list"
-        block: |
-              deb https://apt.kubernetes.io/ kubernetes-xenial main
-
-    - name: install kubernetes
-      shell: |
-              sudo apt-get update
-              sudo apt-get install -y kubelet=1.23.0-00 kubeadm=1.23.0-00 kubectl=1.23.0-00
-              sudo apt-mark hold kubelet kubeadm kubectl
+    - name: install kubectl
+      apt:
+        name: kubectl=1.23.0-00
+        state: present
+        force: yes
