--- a/clusterKubernetes/setMaster/tasks/main.yml
+++ b/clusterKubernetes/setMaster/tasks/main.yml
@@ -1,42 +1,26 @@
 ---
-# tasks file for master-kubernetes
-    - name: initialize the cluster
-      shell: kubeadm init --pod-network-cidr=10.244.0.0/16
+    - name: initialize the cluster with standard Flannel subnet
+      shell: kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-cert-extra-sans=ec2-54-86-154-17.compute-1.amazonaws.com --ignore-preflight-errors=all >> cluster_initialized.txt
       args:
-        chdir: $HOME
         creates: cluster_initialized.txt
 
+    - name: Create config.
+      shell: |
+              mkdir -p $HOME/.kube
+              sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+              sudo chown $(id -u):$(id -g) $HOME/.kube/config
+
+    - name: Create config.
+      shell: export KUBECONFIG=/etc/kubernetes/admin.conf
+              
     - name: create .kube directory
-      become: yes
-      become_user: kube
       file:
-        path: $HOME/.kube
+        path: /home/ansible/.kube/config
         state: directory
         mode: 0755
 
-    - name: copies admin.conf to user's kube config
-      copy:
-        src: /etc/kubernetes/admin.conf
-        dest: /home/kube/.kube/config
-        remote_src: yes
-        owner: kube
-
     - name: install Pod network
-      become: yes
-      become_user: kube
-      shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml 
+      shell: sudo kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml >> flannel_pod_network_setup.txt
       args:
         chdir: $HOME
-        
-    - name: Get the token for joining the worker nodes
-      become: yes
-      become_user: kube
-      shell: kubeadm token create  --print-join-command
-      register: kubernetes_join_command
-
-    - debug:
-        msg: "{{ kubernetes_join_command.stdout }}"
-
-    - name: Copy join command to local file.
-      become: yes
-      local_action: copy content="{{ kubernetes_join_command.stdout_lines[0] }}" dest="/tmp/kubernetes_join_command" mode=0777
+        creates: flannel_pod_network_setup.txt
