--- a/clusterKubernetes/setWorkers/tasks/main.yml
+++ b/clusterKubernetes/setWorkers/tasks/main.yml
@@ -1,13 +1,19 @@
 ---
-# tasks file for workers-kubernetes
-   - name: Copy join command from Ansiblehost to the worker nodes.
-     become: yes
-     copy:
-       src: /tmp/kubernetes_join_command
-       dest: /tmp/kubernetes_join_command
-       mode: 0777
+    - name: get join command
+      shell: kubeadm token create --print-join-command
+      register: join_command_raw
+      tags:
+         - masterJoinCommand
 
-   - name: Join the Worker nodes to the cluster.
-     become: yes
-     command: sh /tmp/kubernetes_join_command
-     register: joined_or_not
+    - name: set join command
+      set_fact:
+        join_command: "{{ join_command_raw.stdout_lines[0] }}"
+      tags:
+         - masterJoinCommand
+
+    - name: join cluster
+      shell: "{{ hostvars['k8sMasters'].join_command }} >> node_joined.txt"
+      args:
+        creates: node_joined.txt
+      tags:
+         - workerJoinCommand
